# cc-example

./: .codeclimate.yml  .gitignore  README.md  front-row-screen.cabal  package.json
data/: meatbar-data.csv
meatbar-exe/: App.hs  AppConfig.hs  Documentation.hs  Main.hs  Meatbar.hs  MeatbarApi.hs  Models.hs  People.hs  PeopleApi.hs
meatbar-exe/Api/: Types.hs
meatbar-exe/Api/Types/: People.hs
meatbar-exe/Api/Types/Meatbars/: Activity.hs  EatStreak.hs  EatenBar.hs  Meatbar.hs
meatbar-exe/Documentation/: Server.hs  Types.hs
site/: .eslintrc.js  README.md  app.rb  index.html  index.js  package.json
site/public/: index.js
site/src/: actions.js  configureStore.js  main.js
site/src/components/: App.js  ConsumerDetail.js  ConsumerList.js  ConsumerListItem.js  ConsumerTable.js  ConsumerTableRow.js  ListDetailView.js  Panel.js
site/src/containers/: ListDetailContainer.js
site/src/reducers/: index.js
src/: Database.hs  Lib.hs  Meatbars.hs  Models.hs  People.hs  Streak.hs
src/Import/: Extract.hs  Import.hs
test/: MeatbarsSpec.hs  StreakSpec.hs
test/Import/: ExtractSpec.hs
