name:                front-row-screen
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/toddmohney/front-row-screen#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable meatbar-exe
  hs-source-dirs:      meatbar-exe
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:       aeson >= 0.9.0.1 && < 0.9.1.0
                     , base
                     , bytestring >= 0.10.6.0 && < 0.10.7.0
                     , either >= 4.4.1 && < 4.5.0
                     , front-row-screen
                     , http-media >= 0.6.3 && < 0.7.0
                     , mtl >= 2.2.1 && < 2.3.0
                     , servant
                     , servant-client
                     , servant-docs
                     , servant-server
                     , text >= 1.2.2.1 && < 1.2.3.0
                     , warp >= 3.2.2 && < 3.3.0
                     , wai >= 3.2.1 && < 3.3.0
                     , wai-extra >= 3.0.15.1 && < 3.0.16.0
  default-language:    Haskell2010
  other-modules:       App
                     , AppConfig
                     , Documentation.Server
                     , Documentation.Types
                     , People

test-suite front-row-screen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , front-row-screen
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toddmohney/front-row-screen
