name:                front-row-screen
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/toddmohney/front-row-screen#readme
license:             BSD3
license-file:        LICENSE
author:              Todd Mohney
maintainer:          toddmohney@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
data-files:          data/*.csv
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Import.Import
                     , Import.Extract
                     , Models
                     , Meatbars
                     , People

  other-modules:       Paths_front_row_screen

  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.6.0 && < 0.10.7.0
                     , cassava
                     , esqueleto >= 2.4.2 && < 2.5.0
                     , monad-logger >= 0.3.18 && < 0.4.0
                     , persistent >= 2.2.4.1 && < 2.2.5.0
                     , persistent-sqlite >= 2.2.1 && < 2.3.0
                     , persistent-template
                     , text >= 1.2.2.1 && < 1.2.3.0
                     , time >= 1.5.0.1 && < 1.5.1.0
                     , vector >= 0.11.0.0 && < 0.11.1.0
  default-language:    Haskell2010

executable meatbar-exe
  hs-source-dirs:      meatbar-exe
  main-is:             Main.hs

  ghc-options:       -Wall
                     -fwarn-unused-matches
                     -fwarn-unused-binds
                     -fwarn-unused-imports
                     -threaded
                     -rtsopts
                     -with-rtsopts=-N

  build-depends:       aeson >= 0.9.0.1 && < 0.9.1.0
                     , base
                     , bytestring >= 0.10.6.0 && < 0.10.7.0
                     , either >= 4.4.1 && < 4.5.0
                     , front-row-screen
                     , http-media >= 0.6.3 && < 0.7.0
                     , monad-logger >= 0.3.18 && < 0.4.0
                     , mtl >= 2.2.1 && < 2.3.0
                     , persistent >= 2.2.4.1 && < 2.2.5.0
                     , persistent-sqlite >= 2.2.1 && < 2.3.0
                     , persistent-template
                     , resourcet >= 1.1.7.3 && < 1.1.8.0
                     , servant
                     , servant-client
                     , servant-docs
                     , servant-server
                     , resource-pool >= 0.2.3.2 && < 0.2.4.0
                     , text >= 1.2.2.1 && < 1.2.3.0
                     , time >= 1.5.0.1 && < 1.5.1.0
                     , transformers >= 0.4.2.0 && < 0.4.3.0
                     , warp >= 3.2.2 && < 3.3.0
                     , wai >= 3.2.1 && < 3.3.0
                     , wai-extra >= 3.0.15.1 && < 3.0.16.0

  default-language:    Haskell2010

  other-modules:       Api.Types.Meatbars.EatenBar
                     , Api.Types.Meatbars.EatStreak
                     , Api.Types.Meatbars.Meatbar
                     , Api.Types.People
                     , App
                     , AppConfig
                     , Documentation.Server
                     , Documentation.Types
                     , MeatbarApi
                     , PeopleApi

test-suite front-row-screen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , front-row-screen
                     , hspec
                     , persistent >= 2.2.4.1 && < 2.2.5.0
                     , persistent-sqlite >= 2.2.1 && < 2.3.0
                     , time >= 1.5.0.1 && < 1.5.1.0

  ghc-options:       -Wall
                     -fwarn-unused-matches
                     -fwarn-unused-binds
                     -fwarn-unused-imports
                     -threaded
                     -rtsopts
                     -with-rtsopts=-N

  other-modules:       Import.ExtractSpec
                       MeatbarsSpec

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toddmohney/front-row-screen
